--- a/index.html
+++ b/index.html
@@ -178,26 +178,30 @@ footer{
 <h4>Presets</h4>
 <div class="grid" id="presets">
 <div class="toggle">Cinematic</div>
-<div class="toggle">Portrait</div>
-<div class="toggle">Landscape</div>
-<div class="toggle">Product</div>
-<div class="toggle">Macro</div>
-<div class="toggle">Fantasy Art</div>
-<div class="toggle">Sci-Fi</div>
-<div class="toggle">Concept Art</div>
-</div>
+  <div class="toggle">Portrait</div>
+  <div class="toggle">Landscape</div>
+  <div class="toggle">Product</div>
+  <div class="toggle">Macro</div>
+  <div class="toggle">Street Photography</div>
+  <div class="toggle">Fantasy Art</div>
+  <div class="toggle">Sci-Fi</div>
+  <div class="toggle">Concept Art</div></div>
 </div>
 
 <div class="group">
 <h4>Styles</h4>
 <div class="grid" id="styles">
 <div class="toggle">Photorealistic</div>
-<div class="toggle">Ultra detailed</div>
-<div class="toggle">HDR</div>
-<div class="toggle">Soft lighting</div>
-<div class="toggle">Sharp focus</div>
-<div class="toggle">Depth of field</div>
-</div>
+  <div class="toggle">Hyperrealistic</div>
+  <div class="toggle">Ambient Occlusion</div>
+  <div class="toggle">Ultra detailed</div>
+  <div class="toggle">HDR</div>
+  <div class="toggle">Soft lighting</div>
+  <div class="toggle">Sharp focus</div>
+  <div class="toggle">Depth of field</div>
+  <div class="toggle">Studio lighting</div>
+  <div class="toggle">High contrast</div>
+  <div class="toggle">Minimal noise</div></div>
 </div>
 
 <div style="display:flex;gap:8px">
