--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@ footer{
 <select id="aspect" class="selectBox">
 <option value="1:1">1:1</option>
 <option value="16:9">16:9</option>
+<option value="9:16">9:16</option>
 <option value="4:3">4:3</option>
 <option value="3:4">3:4</option>
 </select>
