--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content=" ">
-
 <link rel="apple-touch-icon" href="icon-192.png">
 
 <meta charset="UTF-8">
@@ -121,6 +120,38 @@ select{
   border-radius:10px;
   cursor:pointer;
 }
+
+/* IMAGE OVERLAY */
+#imgOverlay{
+  display:none;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background:rgba(0,0,0,.95);
+  justify-content:center;
+  align-items:center;
+  z-index:9999;
+  flex-direction:column;
+}
+#imgOverlay img{
+  max-width:95%;
+  max-height:80%;
+  border-radius:12px;
+  margin-bottom:12px;
+}
+#imgOverlay button{
+  margin:0;
+  flex:1;
+}
+#imgOverlay div{
+  display:flex;
+  gap:12px;
+  width:95%;
+  max-width:400px;
+  justify-content:center;
+}
 </style>
 </head>
 
@@ -147,7 +178,7 @@ select{
   </select>
 </div>
 
-<!-- PRESETS (RESTORED EXACTLY) -->
+<!-- PRESETS -->
 <div class="group">
 <h4>Presets</h4>
 <div class="grid" id="presets">
@@ -163,7 +194,7 @@ select{
 </div>
 </div>
 
-<!-- STYLES (RESTORED EXACTLY) -->
+<!-- STYLES -->
 <div class="group">
 <h4>Styles</h4>
 <div class="grid" id="styles">
@@ -193,10 +224,21 @@ select{
 
 </div>
 
+<!-- IMAGE OVERLAY -->
+<div id="imgOverlay">
+  <img id="overlayImg">
+  <div>
+    <button id="saveOverlayBtn">Save</button>
+    <button id="deleteOverlayBtn">Delete</button>
+    <button id="downloadOverlayBtn">Download</button>
+    <button id="closeOverlayBtn">Close</button>
+  </div>
+</div>
+
 <script>
 const $ = id => document.getElementById(id);
 
-/* Toggle logic (ORIGINAL & SAFE) */
+/* Toggle logic */
 document.querySelectorAll('.toggle').forEach(t=>{
   t.onclick=()=>t.classList.toggle('active');
 });
@@ -241,22 +283,72 @@ function saveToGallery(src){
   renderGallery();
 }
 
+const overlay = $("imgOverlay");
+const overlayImg = $("overlayImg");
+const saveBtn = $("saveOverlayBtn");
+const deleteBtn = $("deleteOverlayBtn");
+const downloadBtn = $("downloadOverlayBtn");
+const closeBtn = $("closeOverlayBtn");
+
+// Open overlay
+function openOverlay(src){
+  overlayImg.src = src;
+  overlay.style.display = "flex";
+}
+
+// Close overlay
+function closeOverlay(){ overlay.style.display = "none"; }
+
+// Render gallery
 function renderGallery(){
   gallery.innerHTML="";
   let g = JSON.parse(localStorage.getItem("picrokGallery")||"[]");
-  g.forEach(src=>{
+  g.forEach((src,i)=>{
     const img = document.createElement("img");
     img.src = src;
-    img.onclick = ()=>result.src = src;
+    img.onclick = ()=>openOverlay(src);
     gallery.appendChild(img);
   });
 }
 renderGallery();
+
+// Overlay buttons
+saveBtn.onclick = ()=>{
+  let g = JSON.parse(localStorage.getItem("picrokGallery")||"[]");
+  if(!g.includes(overlayImg.src)) g.unshift(overlayImg.src);
+  localStorage.setItem("picrokGallery",JSON.stringify(g));
+  renderGallery();
+  alert("Saved!");
+};
+
+deleteBtn.onclick = ()=>{
+  let g = JSON.parse(localStorage.getItem("picrokGallery")||"[]");
+  g = g.filter(x=>x!==overlayImg.src);
+  localStorage.setItem("picrokGallery",JSON.stringify(g));
+  renderGallery();
+  closeOverlay();
+};
+
+downloadBtn.onclick = ()=>{
+  const link = document.createElement("a");
+  link.href = overlayImg.src;
+  link.download = "picrok_image.png";
+  document.body.appendChild(link);
+  link.click();
+  document.body.removeChild(link);
+};
+
+closeBtn.onclick = closeOverlay;
+overlay.onclick = e=>{
+  if(e.target===overlay) closeOverlay();
+};
 </script>
 <script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
-    navigator.serviceWorker.register('./sw.js');
+    navigator.serviceWorker.register('./sw.js')
+      .then(() => console.log('Picrok PWA ready'))
+      .catch(err => console.error('SW failed', err));
   });
 }
 </script>
